@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.ttrssreader"
     android:installLocation="auto"
-    android:versionCode="1420"
+    android:versionCode="1421"
     android:versionName="1.42" >
 
     <uses-sdk
